# mini-DevUI-skill

./: .gitignore  README.md  fix_bench_card.py  screenshot.js  untitled.pen
.agent/rules/: componentrender.md  htmlrender.md  workspace-global.md
.agent/workflows/: component_gen_and_review.md
Angular/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
Angular/src/: index.html  styles.scss
HistoryRender/component/: componentlog.md  log.md
HistoryRender/page/: Pagelog.md  bench-card.html
PRD/: arco_profile_basic.md
PRD/Table/: table-block-PRD.md
icon-feed-mcp/: README.md  SKILL.md  icon_search.py  icons_data.py  pyproject.toml  render_icons_cache.py  requirements.txt  run_mcp.sh  server.py  verify.py
icon-feed-mcp/icons/: README.md
memory/: heartbeat-state.json
skill/1.layout/: layout.md
skill/2.theme/: theme.md
skill/3.component/: button.md  checkbox.md  form.md  search.md  tag.md
skill/4.template/: button-tem.html
skills/mini-DevUI/: SKILL.md
spec/0.role/: icon_role.md
spec/1.layout/: layout.md
spec/3.component/: accordion.md  activityCard.md  announcementCard.md  bread_crumbs.md  button.md  card.md  categorySearch.md  checkbox.md  filter.md  form.md  header.md  headinfo.md  helpDocCard.md  input.md  menuCard.md  pagination.md  search.md  select.md  sidebar.md  table.md  tabs.md
spec/4.template/: activityCard-tem.html  breadcrumbs-tem.html  button-tem.html  categorySearch-tem.html  (+8 more)
themeColor/: Mode 1.tokens.json  devui-dark-theme.tokens.json  devui-light-theme.tokens.json  generate_skill.py  theme-data.json
(+192 files in other folders)
